# ur5e_workstation

./: CMakeLists.txt  README.md  package.xml
include/: manipulation_class.hpp  perception_class.hpp
launch/: ur5e_workstation.launch  wrist_camera.launch
rviz/: workstation.rviz
src/: build_workstation.cpp
src/functions/manipulation/: generate_workspace.cpp
src/functions/perception/: concatenate_cloud.cpp
src/nodes/: manipulation_node.cpp
urdf/: ur5e_joint_limited_robotiq_2f_85.urdf.xacro
